--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
      <header>
-        <img src="" alt="">
+        <img src="batman_quadrinho" alt="batman">
      </header>
     <p></p>
     <h1></h1>
