--- a/index.html
+++ b/index.html
@@ -16,5 +16,18 @@
     <p>Sou o Yuri Silva de Freitas. Sou aluno do colégio Arlinda Ferreira Creplive. Parece difícil ser aluno nesse novo ensino médio, mas é divertido.
         Veja abaixo meus projetos
     </p>
-</body>
-</html>
+<p>Minhas habilidades</p>
+<div>
+    <p>Video-Games</p>
+    <p>Esforço</p>
+    <p>Bike</p>
+    <p>Gosto de ajudar</p>
+</div>
+</header>
+<main class="container mt-5">
+    <h2>Meus projetos</h2>
+    <div class="row">
+        <!-- Projeto 1-->
+        <div class="col-md-4">
+            <div class="card">
+                <img src="im/projeto-1.png" class="crd-img-top" alt="Imagem do projeto"
